--- a/dashboard/src/table/Table.css
+++ b/dashboard/src/table/Table.css
@@ -1,18 +1,67 @@
-tr {
-  border-spacing: 0;
-  border: 1px solid #ededed;
+table {
+  border-spacing: 1;
+  border-collapse: collapse;
+  background: white;
+  border-radius: 0px;
+  overflow: hidden;
   width: 100%;
-  background-color: #fafafa;
+  margin: 0 auto;
+  position: relative;
+}
+table * {
+  position: relative;
+}
+table td, table th {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+table thead tr {
+  height: 60px;
+  background: #1b2f4b;
+  color:#fff;
+}
+table tbody tr {
+  height: 50px;
+}
+table tbody tr:last-child {
+  border: 0;
+}
+table td, table th {
+  text-align: left;
+}
+table td.l, table th.l {
+  text-align: right;
+}
+table td.c, table th.c {
+  text-align: center;
+}
+table td.r, table th.r {
+  text-align: center;
 }
 
-th {
-  padding: 15px;
+
+.table100-head th{
+  font-family: OpenSans-Regular;
+  font-size: 18px;
+  color: #fff;
+  line-height: 1.2;
+  font-weight: unset;
 }
 
-td {
-  padding: 5px 10px;
+tbody tr:nth-child(even) {
+  background-color: #f5f5f5;
 }
 
-.table-border {
-    border: 2px solid #0000;
+tbody tr {
+  font-family: OpenSans-Regular;
+  font-size: 15px;
+  color: #808080;
+  line-height: 1.2;
+  font-weight: unset;
+}
+
+tbody tr:hover {
+  color: #555555;
+  background-color: #f5f5f5;
+  cursor: pointer;
 }
