--- a/dashboard/src/table/Table.css
+++ b/dashboard/src/table/Table.css
@@ -65,3 +65,10 @@ tbody tr:hover {
   background-color: #f5f5f5;
   cursor: pointer;
 }
+
+button {
+  font-family: OpenSans-Regular;
+  font-size: 15px;
+  color:#555555;
+  font-weight: unset;
+}
