--- a/dashboard/src/table/Table.css
+++ b/dashboard/src/table/Table.css
@@ -63,7 +63,6 @@ tbody tr {
 tbody tr:hover {
   color: #555555;
   background-color: #f5f5f5;
-  cursor: pointer;
 }
 
 button {
@@ -71,4 +70,14 @@ button {
   font-size: 15px;
   color:#555555;
   font-weight: unset;
+  cursor: pointer;
+}
+
+button.head { 
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  background-color: #1b2f4b;
+  color: #ffffff;
+  border-color:#555555;
+  cursor: pointer;
+  font-weight: 5px;
 }
